Custom Webhok V1.44 - Register Webview

--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -12,7 +12,7 @@
     <form action="/webviews/save" method="get">
         <input type="hidden" name="psid" id="psid">
         <h5>SF User ID</h5>
-        <input type="text" name="sfinput" value="1"> Weekly<br/>
+        <input type="text" name="sfinput" value=""><br/>
        
         <button id="submitButton" type="Register">Submit</button>
     </form>
