--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -2,20 +2,45 @@
 <html>
 <head>
     <title>SF Register</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    <link rel="stylesheet" href="/webview.css" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
 </head>
 <body>
+
 <div class="container">
-    <h3>Register with SuccessFactors User</h3>
-    <form action="/webviews/save" method="get">
-        <input type="hidden" name="psid" id="psid">
-        <h5>SF User ID</h5>
-        <input type="text" name="sfinput" value=""><br/>
-       
-        <button id="submitButton" type="Register">Submit</button>
-    </form>
+    <div class="row">
+        <div class="col s12 m7">
+            <form action="/webviews/save" method="get">
+                <div class="card">
+                    <div class="card-image">
+                    <img src="../public/assets/register-pic.png">
+                    <span class="card-title"></span>
+                    </div>
+                    <div class="card-content">
+                            <input type="hidden" name="psid" id="psid">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                <input type="text" name="sfinput" id="tbSfinput" class="validate">
+                                <label for="tbSfinput">SF User ID</label>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="card-action">
+                            <button id="submitButton" class="btn waves-effect waves-light " type="submit" name="action">Submit
+                                    <i class="material-icons right">send</i>
+                            </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -27,7 +52,7 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'Messenger'));
 
-    
+
     window.extAsyncInit = function() {
         // the Messenger Exstensions JS SDK is done loading
         MessengerExtensions.getContext('223820597674431',
