Custom Webhok V1.58 - Register Webview

--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -27,7 +27,7 @@
                             <input type="hidden" name="psid" id="psid">
                             <div class="row">
                                 <div class="input-field col s12">
-                                <input type="text" name="sfinput" id="tbSfinput" class="validate">
+                                <input placeholder="Input SF User ID" type="text" name="sfinput" id="tbSfinput" class="validate">
                                 <label for="tbSfinput">SF User ID</label>
                                 </div>
                             </div>
