Custom Webhok V1.59 - Register Webview

--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -59,8 +59,12 @@
             function success(thread_context){
                 $('#psid').val(thread_context.psid);
                 $.getJSON('/webviews/settings?psid=' + thread_context.psid, function (data) {
-                    $('#tbSfinput').val(data.sf_id);
-                    console.log("Data: " + data);
+                    if(data.sf_id){
+                        $('#tbSfinput').val(data.sf_id);
+                        document.getElementById("tbSfinput").disabled = true;
+                    } else {
+                        document.getElementById("tbSfinput").disabled = false;
+                    }
                 });
             },
             function error(err){
