--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row">
         <div class="col s12 m7">
-            <form action="/webviews/save" method="get">
+            <form method="get">
                 <div class="card">
                     <div class="card-image">
                     <img src="https://www.riverbed.com/wp-content-partner/uploads/2017/09/Register-button.jpg">
@@ -33,7 +33,10 @@
                             </div>
                     </div>
                     <div class="card-action">
-                            <button id="submitButton" class="btn waves-effect waves-light " type="submit" name="action">Submit
+                            <button id="unregButton" class="btn waves-effect waves-light " type="submit" name="action">Unregister
+                                    <i class="material-icons right">cancel</i>
+                            </button>
+                            <button formaction="/webviews/save" id="submitButton" class="btn waves-effect waves-light " type="submit" name="action">Submit
                                     <i class="material-icons right">send</i>
                             </button>
                     </div>
@@ -62,8 +65,12 @@
                     if(data.sf_id){
                         $('#tbSfinput').val(data.sf_id);
                         document.getElementById("tbSfinput").disabled = true;
+                        //document.getElementById("unregButton").disabled = false;
+                        //document.getElementById("submitButton").disabled = true;
                     } else {
                         document.getElementById("tbSfinput").disabled = false;
+                        //document.getElementById("unregButton").disabled = true;
+                        //document.getElementById("submitButton").disabled = false;
                     }
                 });
             },
@@ -72,6 +79,14 @@
             }
         );
         $('#submitButton').click(function() {
+            MessengerExtensions.requestCloseBrowser(function success() {
+                // webview closed
+            }, function error(err) {
+                // an error occured
+            });
+        });
+
+        $('#unregButton').click(function() {
             MessengerExtensions.requestCloseBrowser(function success() {
                 // webview closed
             }, function error(err) {
