Custom Webhok V1.63 - Register Webview

--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -33,10 +33,10 @@
                             </div>
                     </div>
                     <div class="card-action">
-                            <button style="visibility: collapse" formaction="/webviews/unregister" id="unregButton" class="btn waves-effect waves-light " type="submit" name="action">Unregister
+                            <button style="visibility: collapse" formaction="/webviews/unregister" id="unregButton" class="btn waves-effect waves-light indigo" type="submit" name="action">Unregister
                                     <i class="material-icons right">cancel</i>
                             </button>
-                            <button style="visibility: collapse" formaction="/webviews/save" id="submitButton" class="btn waves-effect waves-light " type="submit" name="action">Submit
+                            <button style="visibility: collapse" formaction="/webviews/save" id="submitButton" class="btn waves-effect waves-light indigo" type="submit" name="action">Submit
                                     <i class="material-icons right">send</i>
                             </button>
                     </div>
