Custom Webhok V1.66 - Register Webview

--- a/views/sfuser-register.ejs
+++ b/views/sfuser-register.ejs
@@ -20,7 +20,7 @@
             <form method="get">
                 <div class="card">
                     <div class="card-image">
-                    <img src="https://www.riverbed.com/wp-content-partner/uploads/2017/09/Register-button.jpg">
+                    <img src="/assets/register-pic.png">
                     <span class="card-title"></span>
                     </div>
                     <div class="card-content">
